--- a/src/Pages/Home/HeroSection/hero.module.css
+++ b/src/Pages/Home/HeroSection/hero.module.css
@@ -1,52 +1,52 @@
-/* HeroSection.module.css */
+
 .heroContainer {
   position: relative;
-  height: 100vh; /* Full screen height */
+  height: 100vh; 
   background-size: cover;
   background-position: center;
-  margin-left: 1.5rem; /* Equivalent to mx-6 in Tailwind */
+  margin-left: 1.5rem; 
   margin-right: 1.5rem;
 }
 
 .heroContent {
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0); /* Transparent initially */
+  background-color: rgba(0, 0, 0, 0); 
   transition: background-color 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   text-align: left;
-  padding: 3.5rem; /* Equivalent to p-14 in Tailwind */
+  padding: 3.5rem;
 }
 
 .heroContent:hover {
-  background-color: rgba(0, 0, 0, 0.5); /* Hover effect */
+  background-color: rgba(0, 0, 0, 0.5); 
 }
 
 .heroTitle {
-  font-size: 2.5rem; /* Equivalent to text-4xl in Tailwind */
-  font-size: 3.75rem; /* Equivalent to md:text-6xl in Tailwind */
+  font-size: 2.5rem; 
+  font-size: 3.75rem; 
   color: white;
   font-weight: bold;
-  margin-bottom: 2rem; /* Equivalent to mb-8 in Tailwind */
+  margin-bottom: 2rem;
 }
 
 .heroDescription {
-  font-size: 1.125rem; /* Equivalent to text-lg in Tailwind */
+  font-size: 1.125rem; 
   color: white;
-  margin-bottom: 2rem; /* Equivalent to mb-8 in Tailwind */
+  margin-bottom: 2rem; 
 }
 
 .heroButton {
   background-color: white;
   color: black;
-  padding: 0.75rem 1.5rem; /* Equivalent to px-6 py-3 in Tailwind */
+  padding: 0.75rem 1.5rem;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
 }
 
 .heroButton:hover {
-  background-color: #bfbfbf; /* Equivalent to hover:bg-gray-400 in Tailwind */
+  background-color: #bfbfbf;
 }
